# Flutter_Widget_Project

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lip.cpp
android/app/src/main/kotlin/com/example/widget/: MainActivity.kt
android/app/src/main/kotlin/com/example/widget2/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
lib/: main.dart
lib/model/: todo_list.dart
lib/page/: home.dart  widget1.dart
